# aule

./: .gitignore  LICENSE  README.md  build_dist.py  build_doc.py  pyproject.toml  setup.py
aule/: __init__.py  _guards.py  _logging.py  _shapes.py  _validator.py  report.py
aule/metrics/: __init__.py  classification.py  climate.py  core.py  earth_observation.py  ensemble.py  spatial_verification.py  spectral.py  timeseries.py  uncertainty.py
aule/plots/: __init__.py  _style.py  advanced.py  classification.py  climate.py  core.py  diagnostics.py  ensemble.py  spatial.py  timeseries.py
docs/: aule.html  index.html  search.js
docs/aule/: _guards.html  _logging.html  _shapes.html  _validator.html  metrics.html  plots.html  report.html
docs/aule/metrics/: classification.html  climate.html  core.html  earth_observation.html  ensemble.html  spatial_verification.html  spectral.html  timeseries.html  uncertainty.html
docs/aule/plots/: _style.html  advanced.html  classification.html  climate.html  core.html  diagnostics.html  ensemble.html  spatial.html  timeseries.html
docs_assets/: module.html.jinja2  theme.css
notebooks/: 01_core_metrics.ipynb  02_spectral_and_earth_observation_metrics.ipynb  03_climate_metrics.ipynb  04_ensemble_and_uncertainty_metrics.ipynb  05_classification_metrics.ipynb  06_plots.ipynb  07_aule_class.ipynb  08_spatial_verification_and_advanced_plots.ipynb  09_validation_report.ipynb  10_color_normalization.ipynb  11_time_series.ipynb  12_geographic_basemaps.ipynb  13_logging_and_progress.ipynb  report.html  report_with_nan.html  report_with_time.html
tests/: test_advanced_metrics.py  test_classification.py  test_color_norms.py  test_core_metrics.py  test_plots.py  test_report.py  test_shapes.py  test_spatial_verification.py  test_timeseries.py  test_uncertainty.py  test_validator_class.py
